# Fortimind

./: README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: config.rs  main.rs  telemetry.rs  utils.rs
agent/src/ai/: inference.rs
agent/src/monitor/: file.rs  network.rs  process.rs
agent/src/sandbox/: linux.rs  windows.rs
ai-server/: README.md  requirements.txt
ai-server/app/: inference.py  main.py  models
backend-api/: Cargo.toml  README.md
backend-api/src/: db.rs  main.rs
dashboard/: README.md  package.json
dashboard/src/: App.tsx
docs/: api-spec.md  architecture.md  deployment.md  sandbox-design.md  threat-detection.md
models/: convert_to_onnx.ipynb  malware_classifier.onnx  ransomware_lstm.onnx
scripts/: build_deploy.sh  install_linux.sh  install_windows.ps1
