[package]
name = "rustguard-edr-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"
onnxruntime = "0.8"
reqwest = { version = "0.11", features = ["json"] }

[lib]
crate-type = ["cdylib"]