[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"